fix: about section mobile

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -63,6 +63,13 @@
             }
         }
     }
+
+    #about {
+    
+        .about__inner {
+            flex-direction: column;
+        }
+    }
     
 }
 
